Fix text overflow in task

--- a/src/components/Atoms/Slider/styles.module.css
+++ b/src/components/Atoms/Slider/styles.module.css
@@ -4,7 +4,7 @@ html {
 
 [data-reach-slider-input][data-orientation="horizontal"] {
   /* stylelint-disable mavrin/stylelint-declaration-use-css-custom-properties */
-  padding: 10px 18px 28px;
+  padding: 10px 18px 30px;
   width: 100%;
 }
 
