--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -41,7 +41,7 @@ html {
   --spacing-small: 0.5rem;
   --spacing-medium: 1rem;
   --spacing-large: 2rem;
-  --min-touch-target-size: 40px;
+  --min-touch-target-size: 44px;
 
   /* Borders */
   --border-width: 1px;
@@ -64,7 +64,7 @@ html {
     sans-serif;
 
   /* Font sizes */
-  --font-size-small: 0.8rem;
+  --font-size-small: 0.875rem;
   --font-size-normal: 1rem;
   --font-size-emphasis: 1.25rem;
   --font-size-subtitle-small: 1.5rem;
